// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CVCreateDowntime should render create flow 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--margin-bottom-large"
  >
    <div
      class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
      data-testid="page-header"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="PageHeader--breadcrumbsDiv"
        >
          <div
            class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/undefined/settings"
              >
                <span
                  class="bp3-icon bp3-icon-cog StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
                  icon="cog"
                >
                  <svg
                    data-icon="cog"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      cog
                    </desc>
                    <path
                      d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  common.accountSettings
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/undefined/settings/resources/slo-downtime"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  common.sloDowntimeLabel
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <h3
          class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-variation-h4"
          level="3"
        >
          cv.sloDowntime.createSLODowntime
        </h3>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main PageBody--pageBody"
      data-name="page-body"
      data-testid="page-body"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--margin-xlarge"
          data-testid="Stepper_main"
        >
          <div
            class="StyledProps--font StyledProps--main stepContainer"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-start"
                data-testid="steptitle_DEFINE_DOWNTIME"
                style="cursor: not-allowed;"
              >
                <span
                  class="bp3-icon StyledProps--main iconNoBorder editIcon StyledProps--margin-small StyledProps--color StyledProps--color-primary9"
                  data-icon="Edit"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-h5 StyledProps--color StyledProps--color-primary10"
                >
                  cv.sloDowntime.steps.identification
                   
                </p>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main alignContainerRight borderLeft stepMargin"
              data-testid="step_container_DEFINE_DOWNTIME"
            >
              <div
                class="StyledProps--font StyledProps--main"
              >
                <div
                  class="bp3-card bp3-elevation-0 Card--card card"
                  data-testid="panel_DEFINE_DOWNTIME"
                >
                  <div
                    class="Layout--vertical Layout--layout-spacing-huge StyledProps--main"
                  >
                    <div
                      class="StyledProps--font StyledProps--main"
                      style="width: 350px;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main main"
                      >
                        <div
                          class="InputWithIdentifier--txtNameContainer TextInput--main"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                          >
                            <div
                              class="Text--withDocsTooltip"
                              data-tooltip-id="universalInputNameWithId"
                            >
                              <p
                                class="StyledProps--font StyledProps--main"
                              >
                                Id
                              </p>
                            </div>
                            <p
                              class="StyledProps--font StyledProps--main"
                            >
                              :
                            </p>
                            <span
                              class="bp3-popover-wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                                  tabindex="0"
                                >
                                  <span
                                    class="bp3-editable-text-content"
                                    style="height: 1px; line-height: 1px; min-width: 0;"
                                  />
                                </div>
                              </span>
                            </span>
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="Edit"
                              style="vertical-align: middle; cursor: pointer;"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  opacity="0.3"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="bp3-form-group"
                          >
                            <label
                              class="bp3-label"
                              for="name"
                            >
                              <span
                                class="Tooltip--acenter"
                                data-tooltip-id="downtimeForm_name"
                              >
                                cv.sloDowntime.downtimeName
                              </span>
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="name"
                                  placeholder="common.namePlaceholder"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        >
                          <label
                            class="Label--main bp3-label descriptionLabel"
                          >
                            optionalField
                            <span
                              class="bp3-icon StyledProps--main editOpen"
                              data-icon="Edit"
                              data-name="edit"
                              data-testid="description-edit"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  opacity="0.3"
                                />
                              </svg>
                            </span>
                          </label>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        >
                          <label
                            class="Label--main bp3-label descriptionLabel"
                          >
                            optionalField
                            <span
                              class="bp3-icon StyledProps--main editOpen"
                              data-icon="Edit"
                              data-name="edit"
                              data-testid="tags-edit"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  opacity="0.3"
                                />
                              </svg>
                            </span>
                          </label>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-variation-card-title"
                      >
                        cv.sloDowntime.selectCategory
                      </p>
                      <div
                        class="bp3-form-group ThumbnailSelect--mainContainer"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                          >
                            <label
                              class="Thumbnail--squareCardContainer Thumbnail--large"
                            >
                              <div
                                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                                tabindex="0"
                              >
                                <p
                                  class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--color StyledProps--color-black"
                                >
                                  cv.sloDowntime.scheduledMaintenance
                                </p>
                              </div>
                              <input
                                name="category"
                                type="checkbox"
                                value="ScheduledMaintenance"
                              />
                            </label>
                            <label
                              class="Thumbnail--squareCardContainer Thumbnail--large"
                            >
                              <div
                                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                                tabindex="0"
                              >
                                <p
                                  class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--color StyledProps--color-black"
                                >
                                  deploymentText
                                </p>
                              </div>
                              <input
                                name="category"
                                type="checkbox"
                                value="Deployment"
                              />
                            </label>
                            <label
                              class="Thumbnail--squareCardContainer Thumbnail--large"
                            >
                              <div
                                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                                tabindex="0"
                              >
                                <p
                                  class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--color StyledProps--color-black"
                                >
                                  common.other
                                </p>
                              </div>
                              <input
                                name="category"
                                type="checkbox"
                                value="Other"
                              />
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-xlarge"
                >
                  <button
                    aria-label="next"
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
                    data-testid="nextButton"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      next
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main stepContainer"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-start"
                data-testid="steptitle_SELECT_DOWNTIME_WINDOW"
                style="cursor: not-allowed;"
              >
                <span
                  class="bp3-icon bp3-icon-ring StyledProps--main iconNoBorder StyledProps--margin-small StyledProps--color StyledProps--color-primary9"
                  icon="ring"
                >
                  <svg
                    data-icon="ring"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <desc>
                      ring
                    </desc>
                    <path
                      d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm0 15c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-h5 StyledProps--color StyledProps--color-primary10"
                >
                  cv.sloDowntime.steps.downtimeWindow
                   
                </p>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main alignContainerRight borderLeft"
              data-testid="step_container_SELECT_DOWNTIME_WINDOW"
            />
          </div>
          <div
            class="StyledProps--font StyledProps--main stepContainer bottomMargin"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-start"
                data-testid="steptitle_SELECT_MONITORED_SERVICES"
                style="cursor: not-allowed;"
              >
                <span
                  class="bp3-icon bp3-icon-ring StyledProps--main iconNoBorder StyledProps--margin-small StyledProps--color StyledProps--color-primary9"
                  icon="ring"
                >
                  <svg
                    data-icon="ring"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <desc>
                      ring
                    </desc>
                    <path
                      d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm0 15c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-h5 StyledProps--color StyledProps--color-primary10"
                >
                  cv.sloDowntime.steps.monitoredServices
                   
                </p>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main alignContainerRight"
              data-testid="step_container_SELECT_MONITORED_SERVICES"
            />
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard footer StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
          data-testid="page-header"
        >
          <div
            class="Layout--vertical StyledProps--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
            >
              <button
                aria-label="cancel"
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
              <button
                aria-label="save"
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CVCreateDowntime should render one time end time based downtime data on edit page 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--margin-bottom-large"
  >
    <div
      class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
      data-testid="page-header"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="PageHeader--breadcrumbsDiv"
        >
          <div
            class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/dummy/cv/orgs/dummy/projects/dummy"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="cv-main"
                >
                  <svg
                    height="16"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="cv-main_svg__a"
                      x1="7.5"
                      x2="20.926"
                      y1="3"
                      y2="28.987"
                    >
                      <stop
                        offset="0"
                        stop-color="#bea1ff"
                      />
                      <stop
                        offset="1"
                        stop-color="#8a36ff"
                      />
                    </lineargradient>
                    <g
                      clip-rule="evenodd"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M25.933 24.357A12.972 12.972 0 0116 28.969a12.972 12.972 0 01-9.933-4.612l6.026-3.834A5.976 5.976 0 0016 21.969a5.977 5.977 0 003.907-1.446zm1.066-1.455l-5.906-3.759a6.001 6.001 0 00-4.193-9.107V3C23.66 3.462 29 9.092 29 15.97a12.94 12.94 0 01-2 6.932zM15.1 3C8.34 3.462 3 9.092 3 15.97c0 2.548.733 4.925 2 6.932l5.907-3.759a6.001 6.001 0 014.192-9.107z"
                        fill="url(#cv-main_svg__a)"
                      />
                      <path
                        d="M19.558 13.286a.9.9 0 01-.044 1.272l-4.286 4a.9.9 0 01-1.228 0l-1.714-1.6a.9.9 0 011.228-1.316l1.1 1.027 3.672-3.427a.9.9 0 011.272.044z"
                        fill="#ae82fc"
                      />
                    </g>
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  dummy
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/dummy/cv/orgs/dummy/projects/dummy/setup/resources/slo-downtime"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  common.sloDowntimeLabel
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <h3
          class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-variation-h4"
          level="3"
        >
          cv.sloDowntime.editSLODowntime
        </h3>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main PageBody--pageBody"
      data-name="page-body"
      data-testid="page-body"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--margin-xlarge"
          data-testid="Stepper_main"
        >
          <div
            class="StyledProps--font StyledProps--main stepContainer"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-start"
                data-testid="steptitle_DEFINE_DOWNTIME"
                style="cursor: pointer;"
              >
                <span
                  class="bp3-icon bp3-icon-tick-circle StyledProps--main iconNoBorder StyledProps--margin-small StyledProps--color StyledProps--color-primary7"
                  icon="tick-circle"
                >
                  <svg
                    data-icon="tick-circle"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <desc>
                      tick-circle
                    </desc>
                    <path
                      d="M10 20C4.48 20 0 15.52 0 10S4.48 0 10 0s10 4.48 10 10-4.48 10-10 10zm5-14c-.28 0-.53.11-.71.29L8 12.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29.28 0 .53-.11.71-.29l7-7A1.003 1.003 0 0015 6z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-h5 StyledProps--color StyledProps--color-primary7"
                >
                  cv.sloDowntime.steps.identification
                   
                </p>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main alignContainerRight borderLeft stepMargin"
              data-testid="step_container_DEFINE_DOWNTIME"
            >
              <div
                class="StyledProps--font StyledProps--main"
                data-testid="preview_DEFINE_DOWNTIME"
                style="width: 500px;"
              >
                <div
                  class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main previewLabelAndValue"
                  >
                    <p
                      class="StyledProps--font StyledProps--main label"
                      style="width: 120px;"
                      title="cv.sloDowntime.downtimeName"
                    >
                      cv.sloDowntime.downtimeName
                    </p>
                    <div
                      class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main value"
                      >
                        SLO Downtime
                      </p>
                    </div>
                  </div>
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main previewLabelAndValue"
                  >
                    <p
                      class="StyledProps--font StyledProps--main label"
                      style="width: 120px;"
                      title="description"
                    >
                      description
                    </p>
                    <div
                      class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main value"
                      >
                        Weekly downtime
                      </p>
                    </div>
                  </div>
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main previewLabelAndValue"
                  >
                    <p
                      class="StyledProps--font StyledProps--main label"
                      style="width: 120px;"
                      title="cv.sloDowntime.category"
                    >
                      cv.sloDowntime.category
                    </p>
                    <div
                      class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main value"
                      >
                        deploymentText
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main stepContainer"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-start"
                data-testid="steptitle_SELECT_DOWNTIME_WINDOW"
                style="cursor: pointer;"
              >
                <span
                  class="bp3-icon bp3-icon-tick-circle StyledProps--main iconNoBorder StyledProps--margin-small StyledProps--color StyledProps--color-primary7"
                  icon="tick-circle"
                >
                  <svg
                    data-icon="tick-circle"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <desc>
                      tick-circle
                    </desc>
                    <path
                      d="M10 20C4.48 20 0 15.52 0 10S4.48 0 10 0s10 4.48 10 10-4.48 10-10 10zm5-14c-.28 0-.53.11-.71.29L8 12.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29.28 0 .53-.11.71-.29l7-7A1.003 1.003 0 0015 6z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-h5 StyledProps--color StyledProps--color-primary7"
                >
                  cv.sloDowntime.steps.downtimeWindow
                   
                </p>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main alignContainerRight borderLeft stepMargin"
              data-testid="step_container_SELECT_DOWNTIME_WINDOW"
            >
              <div
                class="StyledProps--font StyledProps--main"
                data-testid="preview_SELECT_DOWNTIME_WINDOW"
                style="width: 500px;"
              >
                <div
                  class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main previewLabelAndValue"
                  >
                    <p
                      class="StyledProps--font StyledProps--main label"
                      style="width: 120px;"
                      title="summary"
                    >
                      summary
                    </p>
                    <div
                      class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main value"
                      >
                        Starting on 2030-03-26 02:50 PM (Asia/Calcutta) till 2030-03-26 03:07 PM
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main stepContainer bottomMargin"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-start"
                data-testid="steptitle_SELECT_MONITORED_SERVICES"
                style="cursor: pointer;"
              >
                <span
                  class="bp3-icon bp3-icon-tick-circle StyledProps--main iconNoBorder StyledProps--margin-small StyledProps--color StyledProps--color-primary7"
                  icon="tick-circle"
                >
                  <svg
                    data-icon="tick-circle"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <desc>
                      tick-circle
                    </desc>
                    <path
                      d="M10 20C4.48 20 0 15.52 0 10S4.48 0 10 0s10 4.48 10 10-4.48 10-10 10zm5-14c-.28 0-.53.11-.71.29L8 12.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29.28 0 .53-.11.71-.29l7-7A1.003 1.003 0 0015 6z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-h5 StyledProps--color StyledProps--color-primary7"
                >
                  cv.sloDowntime.steps.monitoredServices
                   
                </p>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main alignContainerRight borderLeft stepMargin"
              data-testid="step_container_SELECT_MONITORED_SERVICES"
            >
              <div
                class="StyledProps--font StyledProps--main"
              >
                <div
                  class="bp3-card bp3-elevation-0 Card--card card"
                  data-testid="panel_SELECT_MONITORED_SERVICES"
                >
                  <div
                    class="StyledProps--font StyledProps--main PageBody--pageBody minHeight"
                    data-name="page-body"
                    data-testid="page-body"
                  >
                    <div
                      class="Layout--vertical Layout--layout-spacing-large StyledProps--main addMonitoredServices"
                    >
                      <div
                        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-small StyledProps--margin-left-small"
                      >
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey1000"
                        >
                          cv.sloDowntime.msList
                        </p>
                        <div
                          class="Layout--horizontal StyledProps--main tagBox"
                        >
                          <span
                            class="Tag--main"
                          >
                            <span
                              class="bp3-tag"
                            >
                              <span
                                class="bp3-text-overflow-ellipsis bp3-fill"
                              >
                                <span
                                  class="serviceName"
                                />
                                 - 
                              </span>
                              <button
                                class="bp3-tag-remove"
                                type="button"
                              >
                                <span
                                  class="bp3-icon bp3-icon-small-cross"
                                  icon="small-cross"
                                >
                                  <svg
                                    data-icon="small-cross"
                                    height="16"
                                    viewBox="0 0 16 16"
                                    width="16"
                                  >
                                    <desc>
                                      small-cross
                                    </desc>
                                    <path
                                      d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </span>
                          </span>
                          <span
                            class="Tag--main"
                          >
                            <span
                              class="bp3-tag"
                            >
                              <span
                                class="bp3-text-overflow-ellipsis bp3-fill"
                              >
                                <span
                                  class="serviceName"
                                />
                                 - 
                              </span>
                              <button
                                class="bp3-tag-remove"
                                type="button"
                              >
                                <span
                                  class="bp3-icon bp3-icon-small-cross"
                                  icon="small-cross"
                                >
                                  <svg
                                    data-icon="small-cross"
                                    height="16"
                                    viewBox="0 0 16 16"
                                    width="16"
                                  >
                                    <desc>
                                      small-cross
                                    </desc>
                                    <path
                                      d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </span>
                          </span>
                        </div>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      >
                        <button
                          aria-label="cv.sloDowntime.selectMonitoredServices"
                          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall StyledProps--margin-left-small Button--with-current-color Button--variation Button--variation-secondary"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            cv.sloDowntime.selectMonitoredServices
                          </span>
                        </button>
                      </div>
                      <div
                        class="bp3-divider"
                      />
                      <div
                        class="Layout--horizontal StyledProps--main checkbox StyledProps--flex StyledProps--flex-justifyContent-flex-start"
                      >
                        <label
                          class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                        </label>
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-grey1000"
                        >
                          cv.sloDowntime.selectAllMonitoredServices
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-xlarge"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-secondary"
                    data-testid="backButton"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-chevron-left StyledProps--main"
                      icon="chevron-left"
                    >
                      <svg
                        data-icon="chevron-left"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-left
                        </desc>
                        <path
                          d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      back
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard footer StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
          data-testid="page-header"
        >
          <div
            class="Layout--vertical StyledProps--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
            >
              <button
                aria-label="cancel"
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
              <button
                aria-label="save"
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
